
Tue Sep  7 11:26:24 PDT 1999
(Raster)

fixed "not recognising clicks when chaded" problem

-------------------------------------------------------------------------------

Tue Sep  7 14:36:02 PDT 1999
(Mandrake)

yet more KDE stuff.  time to make a couple of configuration flags, add in
the stuff to the main event loop, and test test test

-------------------------------------------------------------------------------

Tue Sep  7 16:33:15 PDT 1999
(Mandrake)

more stuff for KDE support

-------------------------------------------------------------------------------

Tue Sep  7 17:03:02 PDT 1999
(Mandrake)

well, I suppose if we're going to CHECK a variable, we should SET it.

-------------------------------------------------------------------------------

Tue Sep  7 17:08:13 PDT 1999
(Raster)

added icons and icondefs file.. feel free to submti nice icons and addtions to
the icondefs file for your favorite apps :)

-------------------------------------------------------------------------------

Tue Sep  7 18:33:13 PDT 1999
(Raster)

set display_warp to 0 if xkb isnt available

-------------------------------------------------------------------------------

Tue Sep  7 19:48:26 PDT 1999
(KainX)

Fixed some rastermanglish.

-------------------------------------------------------------------------------

Wed Sep  8 08:40:40 PDT 1999
(Raster)

do anim AFTEr we move the window to a new spot :)

-------------------------------------------------------------------------------

Wed Sep  8 08:58:10 PDT 1999
(Raster)

raiselower patch applied :)

-------------------------------------------------------------------------------

Wed Sep  8 13:50:50 PDT 1999
(Mandrake)

A little more refining of kde stuff.  trying to make pager work right.

-------------------------------------------------------------------------------

Wed Sep  8 14:21:49 PDT 1999
(Raster)

and send events with timestanps later or equal to the input focus timestamp 
for multihead keypress event passing.